--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -70,7 +70,6 @@
   }
 
   .product-tools{
-    z-index: 2;
     display: grid;
     grid-template-columns: 5fr 1fr;
     gap: 10px;
